--- a/.github/workflows/SwiftRunnerCI.yml
+++ b/.github/workflows/SwiftRunnerCI.yml
@@ -14,4 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: swift build -v
+      run: xcodebuild clean test -project NetGuard.xcodeproj -scheme NetGuard -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          bash <(curl -s https://codecov.io/bash)
