--- a/.github/workflows/SwiftRunnerCI.yml
+++ b/.github/workflows/SwiftRunnerCI.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: xcodebuild clean test -project NetGuard.xcodeproj -scheme NetGuard CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+      run: xcodebuild -project NetGuard.xcodeproj -scheme NetGuard CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
